tests/NormalTests/paczka1/small_fuzzy/97079697.err
Error in line 2: qDM8e S435 17,6
Error in line 1: XbpU A566 97,9
Error in line 7: XbpU A910 7',9
Error in line 4: XbpU A910 15,1
Error in line 13: XbpU A12 36,89
Error in line 10: XbpU A12 14,6
